# pseudo3D

./: .gitignore  README.md  Redame.MD
pseudo3D_by_mypzik3D/: CMakeLists.txt  control.h  data.h  delay.h  draw.h  main.cpp  raycasting.h  sfml_draw.h
